# FabricaPortal_BackEnd

./: .gitignore  Dockerfile  Procfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  portal.dump  pyproject.toml  requirements.txt
core/authentication/: admin.py  apps.py  managers.py  router.py
core/authentication/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_is_verified_user_verification_code.py
core/authentication/models/: User.py  user.py
core/authentication/serializers/: user.py
core/authentication/signals/: user.py
core/authentication/templates/: email.html  verification_code.html
core/authentication/utils/: mail.py  test_verify_user_view.py  verify.py  verify_user_view.py
core/authentication/views/: user.py
core/management/commands/: migrate_db.py  populate_all.py
core/portal/: admin.py  apps.py  router.py
core/portal/filters/: __init__.py  filter_member.py  project_member.py  search_project.py
core/portal/migrations/: 0001_initial.py  0002_member_image_project_image.py  0002_project_members.py  0003_alter_project_initial_date_new.py  0004_alter_member_biography_alter_member_social_media_and_more.py  0004_remove_member_social_media_remove_project_areas_and_more.py  0005_member_email.py  0006_alter_project_initial_date.py
core/portal/models/: __init__.py  area.py  course.py  course_member.py  member.py  new.py  project.py
core/portal/serializers/: __init__.py  area.py  course.py  course_member.py  member.py  new.py  project.py
core/portal/views/: __init__.py  area.py  course.py  course_member.py  (+3 more)
core/uploader/: admin.py  apps.py  router.py
django_project/: celery.py  permission.py  router.py  settings.py  urls.py
(+8 files in other folders)
