[project]
name = "FabricaPortal_BackEnd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "jonatasperaza", email = "jonatassilvaperaza@gmail.com" }]
dependencies = [
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "python-dotenv>=1.0.1",
    "django-filter>=25.1",
    "djangorestframework-simplejwt>=5.4.0",
    "django-cors-headers>=4.7.0",
    "Pillow>=11.1.0",
    "cloudinary>=1.42.2",
    "celery[redis]>=5.4.0",
    "django-celery-results>=2.5.1",
    "pika>=1.3.2",
    "kombu>=5.4.2",
    "faker>=37.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[tool.pdm.scripts]
dev = "python manage.py runserver"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
changepassword = "python manage.py changepassword"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"
model = "python manage.py graph_models -a -g -o models.png"
populate = "python manage.py populate_all"
migrate_db = "python manage.py migrate_db"
req = "pdm export -f requirements --without-hashes -o requirements.txt"
